updated alt descriptions for images

--- a/portfolio/gallery.html
+++ b/portfolio/gallery.html
@@ -26,19 +26,19 @@
         <h2>Gallery</h2>
         <div class="gallery-container">
             <div class="gallery-item">
-                <img src="nightsky.jpg" alt="Image 1">
+                <img src="nightsky.jpg" alt="Image of night sky">
             </div>
             <div class="gallery-item">
-                <img src="sky.png" alt="Image 2">
+                <img src="sky.png" alt="Image of sky">
             </div>
             <div class="gallery-item">
-                <img src="sun.png" alt="Image 3">
+                <img src="sun.png" alt="Image of sun">
             </div>
             <div class="gallery-item">
-                <img src="cake.png" alt="Image 4">
+                <img src="cake.png" alt="Image of cake">
             </div>
             <div class="gallery-item">
-                <img src="cake.png" alt="Image 4">
+                <img src="cake.png" alt="Image of cake">
             </div>
         </div>
     </div>
